Fixed ugly multiselect.
Multiselect used to be done by adjusting the height of the select
element, which didn't look good in all browsers. Now we instead have a
text input and a select input that are selectively shown and hidden.
Text input also shows the selected options.

--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -194,8 +194,9 @@ small {
 	margin-left: 0px;
 }
 
+/* Hide select initially (show on focus) */
 select[multiple].multiselect {
-	height: 30px;
+	display: none;
 }
 
 .activeLink {
